# cli

./: README.md  pyproject.toml  run.sh
.github/workflows/: update-emojis.yml
completions/: hyprlux.fish
src/hyprlux/: __init__.py  parser.py
src/hyprlux/data/templates/: discord.scss  qtct.conf  spicetify-dark.ini  spicetify-light.ini
src/hyprlux/subcommands/: emoji.py  pip.py  record.py  scheme.py  screenshot.py  shell.py  toggle.py  wallpaper.py
src/hyprlux/utils/: notify.py  paths.py  scheme.py  theme.py  wallpaper.py
src/hyprlux/utils/material/: __init__.py
