[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hyprlux"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
hyprlux = "hyprlux:main"

[tool.hatch.version]
source = "vcs"
